# drift

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/drift_tg_bot/: __init__.py  config.py  conversations.py  drift.py  handlers.py  main.py  policy.py
tests/: test_config.py  test_conversations.py  test_drift.py  test_policy.py  test_prompt.py
